Update WalletGui.java